# SySQF

./: .gitignore  CMakeLists.txt  README.md
src/: commandmap.h
src/sysqf/: filesystemcmds.cpp  jsoncmds.cpp  systemcmds.cpp
